adjust some WSAGetLastError usages in windows network coding

XMLWordPrintable

    • b10
    • generic
    • windows
    • Not verified

        There are a number usages of the WSAGetLastError function in the windows network coding that are a bit problematic :
        - at one place the function is not called immediately after error ( jdk/src/java.base/windows/native/libnet/SocketInputStream.c)
        - at 2 places the function is used where no socket error occured but malloc failed (jdk/src/java.base/windows/native/libnet/Inet6AddressImpl.c ping6 and jdk/src/java.base/windows/native/libnet/Inet4AddressImpl.c ping4 )
         

              Assignee:
              Matthias Baesken
              Reporter:
              Matthias Baesken
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: