8210147: adjust some WSAGetLastError usages in windows network coding

Reviewed-by: clanger, stuefe